[package]
name = "STCMBlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.11"
actix-multipart = "0.6.0"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
uuid = { version = "1.3.0", features = ["v4"] }
tera = "1.13.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.26"